--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <script type="text/javascript" src="code.js"></script>
+        <script type="text/javascript" src="scripps/main.js"></script>
     </body>
 </html>
