--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <script type="text/javascript" src="scripps/main.js"></script>
+        
+        <!-- choose a file to open-->
+        <input type="file" id="inFile" accept="image/png, image/jpeg" onchange="openImage()">
+        <!-- empty image preview -->
+        <img id="inPrev">
     </body>
 </html>
