--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     </head>
     <body>
         <script type="text/javascript" src="scripps/main.js"></script>
+        <script type="text/javascript" src="scripps/javaScriptUtilities.js"></script>
+        <script type="text/javascript" src="scripps/pythonUtilities.js"></script>
+        <script type="text/javascript" src="scripps/normal.js"></script>
         
         <!-- choose a file to open-->
-        <input type="file" id="inFile" accept="image/png, image/jpeg" onchange="openImage()">
+        <input type="file" id="inFile" accept="image/png, image/jpeg" onchange="loadPreview()">
         <!-- empty image preview -->
         <img id="inPrev">
     </body>
