--- a/index.html
+++ b/index.html
@@ -10,9 +10,24 @@
         <script type="text/javascript" src="scripps/pythonUtilities.js"></script>
         <script type="text/javascript" src="scripps/normal.js"></script>
         
+
+
         <!-- choose a file to open-->
         <input type="file" id="inFile" accept="image/png, image/jpeg" onchange="loadPreview()">
-        <!-- empty image preview -->
+        <!-- empty input image preview -->
         <img id="inPrev">
+
+        <!-- scale slider -->
+        <input type="range"> 
+        <!-- scale number -->
+        <input type="number">
+
+        <!-- pixel size -->
+        <input type="number">
+        <input type="number">
+
+        <!-- empty output image preview -->
+        <img id="outPrev">
+
     </body>
 </html>
