--- a/index.html
+++ b/index.html
@@ -18,22 +18,28 @@
         <!-- empty input image preview -->
         <canvas id="inPrev"></canvas>
 
-        <!-- scale slider -->
-        <input type="range"> 
-        <!-- scale number -->
-        <input type="number" id="newScale" value="0.5">
+        <span id="stepTwo" style="display:none">
+            <!-- scale slider -->
+            <input type="range"> 
+            <!-- scale number -->
+            <label>Scale:</label>
+            <input type="number" id="newScale" value="0.5" min="0" max="1" step="0.1" onchange="sizeChange(event)">
 
-        <!-- o -->
-        <input type="number" id="o" value="0.5">
+            <!-- o -->
+            <label>o:</label>
+            <input type="number" id="o" value="0.5" min="0" max="1" step="0.1">
 
-        <!-- pixel size -->
-        <input type="number" id="newX" value="22">
-        <input type="number" id="newY" value="22">
+            <!-- pixel size -->
+            <label>X:</label>
+            <input type="number" id="newX" value="22" min="0" onchange="sizeChange(event)">
+            <label>Y:</label>
+            <input type="number" id="newY" value="22" min="0" onchange="sizeChange(event)">
 
-        <button onclick="shrink()">Shrink!</button>
+            <button onclick="shrink()">Shrink!</button>
 
-        <!-- empty output image preview -->
-        <canvas id="outPrev"></canvas>
+            <!-- empty output image preview -->
+            <canvas id="outPrev"></canvas>
+        </span>
 
     </body>
 </html>
