--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
             <!-- pixel size -->
             <label>X:</label>
-            <input type="number" id="newX" value="22" min="0" onchange="sizeChange(event)">
+            <input type="number" id="newX" min="0" onchange="sizeChange(event)">
             <label>Y:</label>
-            <input type="number" id="newY" value="22" min="0" onchange="sizeChange(event)">
+            <input type="number" id="newY" min="0" onchange="sizeChange(event)">
 
             <button onclick="shrink()">Shrink!</button>
 
