--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <span id="stepTwo" style="display:none">
             <!-- scale slider -->
-            <input type="range"> 
+            <input type="range" id="newScaleSlide" value="0.5" min="0" max="1" step="0.01" onchange="sizeChange(event)"> 
             <!-- scale number -->
             <label>Scale:</label>
             <input type="number" id="newScale" value="0.5" min="0" max="1" step="0.1" onchange="sizeChange(event)">
