--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <input type="range" id="newScaleSlide" value="0.5" min="0" max="1" step="0.01" onchange="sizeChange(event)"> 
             <!-- scale number -->
             <label>Scale:</label>
-            <input type="number" id="newScale" value="0.5" min="0" max="1" step="0.1" onchange="sizeChange(event)">
+            <input type="number" id="newScale" value="0.5" min="0" max="1" step="0.01" onchange="sizeChange(event)">
 
             <!-- o -->
             <label>o:</label>
@@ -31,9 +31,9 @@
 
             <!-- pixel size -->
             <label>X:</label>
-            <input type="number" id="newX" min="0" onchange="sizeChange(event)">
+            <input type="number" id="newX" min="0" step="1" onchange="sizeChange(event)">
             <label>Y:</label>
-            <input type="number" id="newY" min="0" onchange="sizeChange(event)">
+            <input type="number" id="newY" min="0" step="1" onchange="sizeChange(event)">
 
             <button onclick="shrink()">Shrink!</button>
 
