--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
         <span id="stepTwo" style="display:none">
             <!-- scale slider -->
-            <input type="range" id="newScaleSlide" value="0.5" min="0" max="1" step="0.01" onchange="sizeChange(event)"> 
+            <input type="range" id="newScaleSlide" value="0.5" min="0" max="1" step="0.01" oninput="sizeChange(event)"> 
             <!-- scale number -->
             <label>Scale:</label>
-            <input type="number" id="newScale" value="0.5" min="0" max="1" step="0.01" onchange="sizeChange(event)">
+            <input type="number" id="newScale" value="0.5" min="0" max="1" step="0.01" oninput="sizeChange(event)">
 
             <!-- o -->
             <label>o:</label>
@@ -31,9 +31,9 @@
 
             <!-- pixel size -->
             <label>X:</label>
-            <input type="number" id="newX" min="0" step="1" onchange="sizeChange(event)">
+            <input type="number" id="newX" min="0" step="1" oninput="sizeChange(event)">
             <label>Y:</label>
-            <input type="number" id="newY" min="0" step="1" onchange="sizeChange(event)">
+            <input type="number" id="newY" min="0" step="1" oninput="sizeChange(event)">
 
             <button onclick="shrink()">Shrink!</button>
 
