--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- choose a file to open-->
         <input type="file" id="inFile" accept="image/png, image/jpeg" onchange="loadPreview()">
         <!-- empty input image preview -->
-        <canvas id="inPrev"></canvas>
+        <br><canvas id="inPrev"></canvas>
 
         <span id="stepTwo" style="display:none">
             <!-- scale slider -->
@@ -38,7 +38,7 @@
             <button onclick="shrink()">Shrink!</button>
 
             <!-- empty output image preview -->
-            <canvas id="outPrev"></canvas>
+            <br><canvas id="outPrev"></canvas>
         </span>
 
     </body>
