--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
         </span>
 
         <span id="stepThree">
-            <!-- empty output image preview -->
-            <br><canvas id="outPrev"></canvas>
+            <!-- actual output image -->
+            <br><canvas id="outPrev" style="display: none;"></canvas>
+
+            <!-- big output image preview -->
             <canvas id="bigOutPrev"></canvas>
+
             <!-- empty output cross stitch preview -->
             <br><canvas id="crossPrev"></canvas>
         </span>
