--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </span>
 
         <span id="stepThree">
-            <!-- actual output image -->
+            <!-- actual output image | hidden -->
             <br><canvas id="outPrev" style="display: none;"></canvas>
 
             <!-- big output image preview -->
