--- a/index.html
+++ b/index.html
@@ -20,15 +20,18 @@
         </span>
 
         <span id="stepTwo" style="display:none">
+
             <!-- scale slider -->
             <input type="range" id="newScaleSlide" value="0.5" min="0" max="1" step="0.01" oninput="sizeChange(event)"> 
             <!-- scale number -->
             <label>Scale:</label>
             <input type="number" id="newScale" value="0.5" min="0" max="1" step="0.01" oninput="sizeChange(event)">
 
+            <!-- o slider -->
+            <input type="range" id="oSlider" value="0.5" min="0" max="1" step="0.01" oninput="oChange(event)">
             <!-- o -->
             <label>o:</label>
-            <input type="number" id="o" value="0.5" min="0" max="1" step="0.1">
+            <input type="number" id="o" value="0.5" min="0" max="1" step="0.01" oninput="oChange(event)">
 
             <!-- pixel size -->
             <label>X:</label>
