--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <!-- load all of the scripts -->
         <script type="text/javascript" src="scripps/main.js"></script>
-        <script type="text/javascript" src="scripps/javaScriptUtilities.js"></script>
+        <script type="text/javascript" src="scripps/javascriptUtilities.js"></script>
         <script type="text/javascript" src="scripps/pythonUtilities.js"></script>
         <script type="text/javascript" src="scripps/normal.js"></script>
         
@@ -51,7 +51,7 @@
             <canvas id="bigOutPrev"></canvas>
 
             <!-- empty output cross stitch preview -->
-            <br><canvas id="crossPrev"></canvas>
+            <canvas id="crossPrev"></canvas>
         </span>
 
     </body>
