--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <button onclick="shrink()">Shrink!</button>
 
             <!-- submission button -->
-            <button onclick="cross()">Cross!</button>
+            <button onclick="copyList()">List!</button>
         </span>
 
         <span id="stepThree">
