--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>index</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body onload="startUp()">
 
         <!-- load all of the scripts -->
         <script type="text/javascript" src="scripps/main.js"></script>
@@ -21,7 +21,6 @@
         </span>
 
         <span id="stepTwo" style="display:none">
-
             <!-- scale slider -->
             <input type="range" id="newScaleSlide" value="0.5" min="0" max="1" step="0.01" oninput="sizeChange(event)"> 
             <!-- scale number -->
@@ -42,9 +41,6 @@
 
             <!-- submission button -->
             <button onclick="shrink()">Shrink!</button>
-
-            <!-- submission button -->
-            <button onclick="copyList()">List!</button>
         </span>
 
         <span id="stepThree">
@@ -59,6 +55,16 @@
 
             <!-- empty output cross stitch preview -->
             <canvas id="bigCrossPrev"></canvas>
+
+            <!-- submission button -->
+            <button onclick="copyList()">List!</button>
+        </span>
+
+        <span id="stepFour">
+            <!-- Table -->
+            <table id="colorList">
+
+            </table>
         </span>
 
     </body>
