--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                 <!-- list button -->
                 <button onclick="copyList()">List!</button>
 
-                <a id="saveButton">Save!</a>
+                <!-- save button -->
+                <a id="saveButton" style="display: none;">Save!</a>
+                <button onclick="saveImage()">Save!</button>
             </span>
     
             <span id="stepFour">
